# school_websolution

./: 403.html  README.md  base.html  db.sqlite3  pyproject.toml  replit.md  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
attendance/: admin.py  models.py  urls.py  views.py
cbt/: admin.py  models.py  urls.py  views.py
core/: admin.py  audit_logs.html  charts.py  classroom_form.html  context_processors.py  models.py  subject_list.html  subject_upload.html  term_form.html  term_list.html  urls.py  views.py  youtube_helper.py  youtube_utils.py
emails/: admission_acceptance.html
finance/: admin.py  dashboard.html  invoice_form.html  invoice_list.html  models.py  payment_form.html  urls.py  views.py
homepage/: about.html  admin.py  admission_list.html  apply.html  blog.html  events.html  home_v2.html  letter.html  models.py  urls.py  views.py
notifications/: admin.py  announcement_list.html  message_detail.html  models.py  notification_detail.html  sent_messages.html  urls.py  views.py
school_management/: settings.py  urls.py
scratchcard/: admin.py  apps.py  dashboard.html  models.py  urls.py  views.py
scratchcard 1/: admin.py  apps.py  models.py  urls.py  views.py
students/: admin.py  mark_results.html  models.py  parent_views.py  student_detail.html  student_form.html  student_list.html  urls.py  views.py
teachers/: admin.py  models.py  teacher_form.html  teacher_list.html  urls.py  views.py
templates/: base.html  sw.js
timetable/: admin.py  models.py  timetable_list.html  urls.py  views.py
(+94 files in other folders)
