[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.9",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "reportlab>=4.4.6",
    "whitenoise>=6.11.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
]
